--- a/web/templates/photo_prediction.html
+++ b/web/templates/photo_prediction.html
@@ -10,31 +10,124 @@
 
 {% include "navbar.html" %}
 
-<div class="d-md-flex flex-md-equal w-100 pt-5" style="position: absolute; height: 100%; clear: both">
-    <div class="bg-dark pt-md-5 px-md-5 pt-3 overflow-hidden w-100 h-100">
-        <div class="my-3 py-3 text-center text-white" style="height: 230px;">
+<div class="d-md-flex flex-md-equal w-100 pt-5" style="position: absolute; clear: both">
+    <div class="bg-dark pt-md-5 overflow-hidden w-100 h-100">
+        <div class="my-1 py-3 text-center text-white" style="height: 170px;">
             <h2 class="display-5">Загрузка фото</h2>
-            <p class=" container lead">Загрузите фотографии для их классификации и определения объектов на них.</p>
+            <p class="container lead">Загрузите фотографии для их классификации и определения объектов на них.</p>
         </div>
-        <div class="bg-light shadow-sm mx-auto d-flex justify-content-center vertical-align: middle;"
-             style="width: 70%; height: 100%; border-radius: 42px 42px 0 0;">
-            <div class="card" style="margin-top: 100px; height: 30%; width:450px;">
-                <div class="card-body">
-                     <form action="{% url 'web:photo_load' %}" method="POST" enctype="multipart/form-data">
-                            {% csrf_token %}
-                            <label class="fs-5 mt-3" for="id_match">Выберите фотографии для загрузки</label>
-                            <p><input id="id_match" class="btn btn-light" type="file"
-                                      name="photos" multiple
-                                      accept="image/*"/></p>
-                            <button type="submit" class="btn btn-light shadow-sm mt-5"
-                                    style="padding: 5px 20px; width:100%">Сохранить
-                            </button>
-                        </form>
+        <div class="bg-light shadow-sm mx-auto"
+             style="width: 70%; height: 100%; border-radius: 50px 50px 0 0;">
+            <div class="bg-secondary image_class position-relative overflow-hidden p-1 text-center d-flex" id="content1"
+                 style="border-radius: 43px 43px 0 0;">
+                <div class="mx-auto">
+                    <h1 class="display-5 text-light fw-normal">Load photos</h1>
+                </div>
+                <div class="product-device shadow-sm d-none d-md-block"></div>
+                <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
+            </div>
+            <form action="{% url 'web:photo_load' %}" method="POST" enctype="multipart/form-data">
+            <div class="row">
+
+                <div class="col-3"></div>
+
+                <div class="col-6">
+
+                    <div class="card w-100">
+                        <div class="card-body">
+
+                                {% csrf_token %}
+                                <label class="fs-5 mt-3" for="id_match">Выберите фотографии для загрузки</label>
+                                <p><input id="id_match" class="btn btn-light" type="file"
+                                          name="photos" multiple
+                                          accept="image/*"/></p>
+                                <label class="fs-5 mt-3">Выберите тэги для предсказания</label>
+                                <select name="projects" class="form-select form-select-lg mb-3" multiple
+                                        aria-label=".form-select-lg example">
+                                    {% for project in projects %}
+                                    <option value={{ project.id }}>{{ project }}</option>
+                                    {% endfor %}
+                                </select>
+
+                                <button type="submit" class="btn btn-dark shadow-sm mt-2 position-fixed"
+                                        style="padding: 5px 20px; width:200px; position:absolute; top:470px; left:1300px; height:200px">
+                                    <h4>Предсказать</h4>
+                                </button>
+
+                        </div>
+                    </div>
+
                 </div>
             </div>
-        </div>
+            <div class="bg-secondary image_class position-relative overflow-hidden p-1 text-center d-flex" id="content">
+                <div class="mx-auto">
+                    <h1 class="display-5 text-light fw-normal">Select ({{ photos.all.count }})</h1>
+                </div>
+                <div class="product-device shadow-sm d-none d-md-block"></div>
+                <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
+            </div>
 
+
+            <div class="row">
+
+                <div class="col-3"></div>
+
+                <div class="col-1">
+
+                    {% for photo in photos %}
+
+                    <img src="{{ photo.image.url }}" alt="{{ photo.id }}"
+                         style="height:100px; width:100px; object-fit: cover;">
+
+                    {% endfor %}
+
+                </div>
+
+                <div class="col-5">
+
+                    <select name="photo_select" class="form-select form-select-lg mb-3 mx-auto" multiple
+                            aria-label=".form-select-lg example" style="height:{{ select_height }}px;">
+                        {% for photo in photos %}
+                        <option class="bg-light text-dark text-center text-uppercase align-text-middle"
+                                style="height:100px" value={{ photo.id }}>{{ photo }}
+                        </option>
+                        {% endfor %}
+                    </select>
+
+                </div>
+
+            </div>
+
+        </form>
+        </div>
     </div>
 </div>
 
 {% endblock %}
+
+<!--<div class="bg-light shadow-sm mt-3 mx-auto d-flex justify-content-center vertical-align: middle;"
+             style="width: 70%; height: 100%;">
+
+            <div class="bg-{{data.text}} box-shadow"
+                 style="display: flex; flex-wrap: wrap; justify-content: left;width: 100%;">
+                {% for photo in photos %}
+                <div class="text-center scale" style="flex: 0 1 calc(100%/10)">
+                    <a style="width: 100%; text-decoration:none;" href="{{ photo.get_absolute_url }}">
+                        <img style="width: 100%; height: 120px; object-fit: cover" src="{{ photo.image.url }}"
+                             alt="{{ photo.get_absolute_url }}">
+                    </a>
+                </div>
+                {% endfor %}
+            </div>
+
+        </div>
+
+
+<select name="projects" class="form-select form-select-lg mb-3 w-75 mx-auto" multiple
+                    aria-label=".form-select-lg example" style="height:1000px;">
+                {% for photo in photos %}
+                <option class="bg-dark text-light"
+                        style="background:url('{{ photo.image.url }}') no-repeat center; height:100px" value={{ photo.id }}>{{ photo }}
+                </option>
+                {% endfor %}
+            </select>-->
